Fixed sidebar spacing between elements

--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,14 @@ header button {
     background-color: #f9f9f9;
 }
 
+.sidebar h3 {
+    padding-bottom: 10px;
+}
+
+.sidebar ul {
+    padding-bottom: 10px;
+}
+
 .sidebar ul {
   list-style-type: none;
   margin-top: 1rem;
